# Generated by Django 4.1.1 on 2022-12-28 14:42

import django.core.validators
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('vendors', '0002_vendoraddress'),
    ]

    operations = [
        migrations.CreateModel(
            name='Category',
            fields=[
                ('id', models.BigAutoField(editable=False, primary_key=True, serialize=False, verbose_name='id')),
                ('is_active', models.BooleanField(default=True, verbose_name='active')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='created at')),
                ('last_modified_at', models.DateTimeField(auto_now=True, verbose_name='last modified at')),
                ('name', models.CharField(max_length=128, verbose_name='category name')),
                ('slug', models.SlugField(max_length=128, unique=True, verbose_name='category slug')),
                ('description', models.TextField(verbose_name='category description')),
                ('parent', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='subcategory', to='products.category', verbose_name='parent category')),
            ],
            options={
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='CategoryProduct',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('category', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='category_products', to='products.category', verbose_name='category products')),
            ],
        ),
        migrations.CreateModel(
            name='Product',
            fields=[
                ('id', models.BigAutoField(editable=False, primary_key=True, serialize=False, verbose_name='id')),
                ('is_active', models.BooleanField(default=True, verbose_name='active')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='created at')),
                ('last_modified_at', models.DateTimeField(auto_now=True, verbose_name='last modified at')),
                ('name', models.CharField(max_length=128, verbose_name='product name')),
                ('slug', models.SlugField(max_length=128, unique=True, verbose_name='product slug')),
                ('description', models.TextField(verbose_name='product description')),
                ('rating', models.FloatField(null=True, verbose_name='product rating')),
                ('category', models.ManyToManyField(related_name='related_product', through='products.CategoryProduct', to='products.category', verbose_name='product category')),
                ('vendor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='products', to='vendors.vendor', verbose_name='product vendor')),
            ],
            options={
                'ordering': ['-created_at', '-rating'],
            },
        ),
        migrations.CreateModel(
            name='Variant',
            fields=[
                ('id', models.BigAutoField(editable=False, primary_key=True, serialize=False, verbose_name='id')),
                ('is_active', models.BooleanField(default=True, verbose_name='active')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='created at')),
                ('last_modified_at', models.DateTimeField(auto_now=True, verbose_name='last modified at')),
                ('sku', models.CharField(max_length=128, null=True, verbose_name='variant sku')),
                ('name', models.CharField(max_length=128, verbose_name='variant name')),
                ('price', models.DecimalField(decimal_places=2, max_digits=20, validators=[django.core.validators.MinValueValidator(0.0)], verbose_name='variant price')),
                ('weight', models.FloatField(null=True, verbose_name='variant weight')),
                ('customer_quantity_limit', models.PositiveIntegerField(null=True, verbose_name='quantity per customer')),
                ('product', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='variants', to='products.product', verbose_name='variant parent product')),
            ],
            options={
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='Inventory',
            fields=[
                ('variant', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, primary_key=True, related_name='inventory', serialize=False, to='products.variant', verbose_name='inventory variant')),
                ('quantity', models.PositiveIntegerField(default=0, verbose_name='variant quantity')),
            ],
        ),
        migrations.CreateModel(
            name='Media',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False, verbose_name='media id')),
                ('short_description', models.CharField(max_length=128, null=True, verbose_name='media short description')),
                ('upload', models.FileField(upload_to='product-medias/', verbose_name='media uploaded')),
                ('is_main', models.BooleanField(default=False, verbose_name='is media main?')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='created at')),
                ('variant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='medias', to='products.variant', verbose_name='media variant')),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='categoryproduct',
            name='product',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='product_categories', to='products.product', verbose_name='product categories'),
        ),
    ]
